# LifeTwin

./: .dockerignore  .gitignore  Dockerfile  README.md  Untitled.java  main.py  pyproject.toml
backend/: requirements.txt  test_signup.py  test_supabase.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  decision_factory.py
backend/app/db/: supabase.py
backend/app/dependencies/: auth.py
backend/app/schemas/: auth.py  dashboard.py  decision.py  financial.py  goal.py  history.py  profile.py  simulation.py  timeline.py
backend/app/services/: auth_service.py  dashboard_service.py  decision_service.py  financial_service.py  goal_service.py  history_service.py  profile_service.py  simulation_service.py  timeline_service.py
decision_engine/config/: burnout_rules.yaml  career_rules.yaml  decision_rules.yaml
decision_engine/src/analyzer/: decision_analyzer.py  test_analyzer.py
decision_engine/src/data/: cleaner.py  eda.py  loader.py
decision_engine/src/decision/: context_builder.py  orchestrator.py  response_parser.py  schemas.py  test_decision.py  test_orchestrator.py  test_parser.py
decision_engine/src/decision_intelligence/: analyzer.py  confidence.py  recommendation.py  report.py  risk.py  test_confidence.py  test_decision_intelligence.py  test_recommendation.py  test_report.py  test_risk.py
knowledge_base/: ai_jobs.txt  career.txt  higher_education.txt  salary_growth.txt
lifetwin-ai/: README.md  metadata.json  package-lock.json  package.json  server.ts
lifetwin-ai/src/: App.tsx  index.css  types.ts
(+72 files in other folders)
