[project]
name = "lifetwin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "jsonpointer>=3.1.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "markdown>=3.10.2",
    "pandas>=3.0.5",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "torch>=2.12.1",
    "transformers>=5.13.0",
    "uvicorn>=0.50.0",
]
